更新工作期间笔记

--- a/书籍笔记/后台开发-核心技术与应用实践.md
+++ b/书籍笔记/后台开发-核心技术与应用实践.md
@@ -2,68 +2,37 @@
 <!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
 <!-- code_chunk_output -->
 
-- [ 1.编程语言
-](#1编程语言)
-  - [ 1.1第一章c++编程常用技术  
-](#11第一章c编程常用技术)
-    - [ 1.11第一个c++程序
-](#111第一个c程序)
-    - [ 1.12函数
-](#112函数)
-    - [ 1.13数组
-](#113数组)
-    - [ 1.14指针
-](#114指针)
-    - [ 1.16结构体、共用体、枚举
-](#116结构体-共用体-枚举)
-    - [ 1.17预处理
-](#117预处理)
-  - [  1.2第二章面向对象的c++
-](#12第二章面向对象的c)
-    - [ 1.21类与对象
-](#121类与对象)
-    - [ 1.22继承与派生
-](#122继承与派生)
-    - [ 1.23类的多态
-](#123类的多态)
-  - [  1.3第三章常用STL的使用
-](#13第三章常用stl的使用)
-    - [ 1.34map
-](#134map)
-- [ 2.编译原理和调试
-](#2编译原理和调试)
-  - [ 2.1编译
-](#21编译)
-    - [ 2.11编译与链接
-](#211编译与链接)
-    - [ 2.12makefile的撰写
-](#212makefile的撰写)
-    - [ 2.13目标文件
-](#213目标文件)
-  - [ 2.2调试
-](#22调试)
-    - [ 2.21 strace
-](#221-strace)
-    - [ 2.22 gdb
-](#222-gdb)
-- [ 3.网络相关
-](#3网络相关)
-  - [ 3.1TCP协议
-](#31tcp协议)
-    - [ 3.11TCP协议
-](#311tcp协议)
-  - [ 3.2网络IO模型
-](#32网络io模型)
-    - [ 3.21网络IO模型
-](#321网络io模型)
-    - [ 3.22select函数
-](#322select函数)
-    - [ 3.23poll函数
-](#323poll函数)
-    - [ 3.24epoll函数
-](#324epoll函数)
-    - [ 3.25select/poll/epoll的区别
-](#325selectpollepoll的区别)
+- [1.编程语言](#1编程语言)
+  - [1.1第一章c++编程常用技术](#11第一章c编程常用技术)
+    - [1.11第一个c++程序](#111第一个c程序)
+    - [1.12函数](#112函数)
+    - [1.13数组](#113数组)
+    - [1.14指针](#114指针)
+    - [1.16结构体、共用体、枚举](#116结构体共用体枚举)
+    - [1.17预处理](#117预处理)
+  - [1.2第二章面向对象的c++](#12第二章面向对象的c)
+    - [1.21类与对象](#121类与对象)
+    - [1.22继承与派生](#122继承与派生)
+    - [1.23类的多态](#123类的多态)
+  - [1.3第三章常用STL的使用](#13第三章常用stl的使用)
+    - [1.34map](#134map)
+- [2.编译原理和调试](#2编译原理和调试)
+  - [2.1编译](#21编译)
+    - [2.11编译与链接](#211编译与链接)
+    - [2.12makefile的撰写](#212makefile的撰写)
+    - [2.13目标文件](#213目标文件)
+  - [2.2调试](#22调试)
+    - [2.21 strace](#221-strace)
+    - [2.22 gdb](#222-gdb)
+- [3.网络相关](#3网络相关)
+  - [3.1TCP协议](#31tcp协议)
+    - [3.11TCP协议](#311tcp协议)
+  - [3.2网络IO模型](#32网络io模型)
+    - [3.21网络IO模型](#321网络io模型)
+    - [3.22select函数](#322select函数)
+    - [3.23poll函数](#323poll函数)
+    - [3.24epoll函数](#324epoll函数)
+    - [3.25select/poll/epoll的区别](#325selectpollepoll的区别)
 
 <!-- /code_chunk_output -->
 
@@ -151,7 +120,7 @@ union Test {
   statement two;
 }
 ```  
-1是非复合语句，二是复合语句，在例如`if... else`的地方，可能会当成一个语句，出现问题
+1是非复合语句，二是复合语句，在例如`if... else`的地方，花括号方式可能会出现语法错误。
 * 条件编译
 可以使一部分内容只在满足一定条件时才进行编译
 ```
