--- a/实习笔记/实习笔记.md
+++ b/实习笔记/实习笔记.md
@@ -66,8 +66,7 @@
 
     thread指定的线程退出/被取消
 
-    rval_ptr包含返回码，被取消时被设为
-    PTHREAD_CANCELED，不感兴趣可以设为NULL
+    rval_ptr包含返回码，任娇
 
     可以调用pthread_detached让操作系统进行资源回收
 
@@ -88,7 +87,7 @@
     * 多个线程共享进程的资源
 
     所以，进程是资源分配的最小单位，而线程是CPU调度的最小单位。多线程之间共享同一个进程的地址空间，所以通信简单，但是同步复杂，线程创建、销毁和切换简单，速度快，占用内存少，但线程间会互相影响，一个意外终止，会导致整个进程终止，可靠性更弱。   
-    多进程间各自独立，不会互相影响，程序可靠性强，但是创建、销毁和切换复杂，速度更慢，占用内存更多，通信更加复杂，但是同步简单。
+    多进程间各自独立，不会互相影响，程序可靠性强，但是创建、销毁和切换复杂，速度更慢，占用内存更多，通信更加复杂。
 
     * 进程切换通常由两部分  
         * 切换页目录和使用新的地址空间  
@@ -109,6 +108,7 @@
     * **死锁检测**：不须实现采取任何限制性措施，而是允许系统在运行过程发生死锁，但可通过系统设置的检测机构及时检测出死锁的发生，并精确地确定于死锁相关的进程和资源，然后采取适当的措施，从系统中将已发生的死锁清除掉
     * **死锁解除**：与死锁检测相配套的一种措施。当检测到系统中已发生死锁，需将进程从死锁状态中解脱出来。常用方法：撤销或挂起一些进程，以便回收一些资源，再将这些资源分配给已处于阻塞状态的进程。死锁检测盒解除有可能使系统获得较好的资源利用率和吞吐量，但在**实现上难度也最大**
 
+    [银行家算法](https://zh.wikipedia.org/wiki/%E9%93%B6%E8%A1%8C%E5%AE%B6%E7%AE%97%E6%B3%95)
 ### 2.多线程同步相关
 * mutex
     ```c
@@ -134,7 +134,7 @@
     linux sem信号量具有原子性，用于解决共享资源的同步问题。
     ```c
     //创建信号量
-    int sem_init(sem_t *sem, int pshared, unsigned int value);
+    int sem_init(sem_t *sem, int 23bq, unsigned int value);
     //等待，尝试等待
     int sem_wait(sem_t *sem); 
     int sem_trywait(sem_t *sem);
@@ -144,7 +144,7 @@
     int sem_getvalue(sem_t *sem, int *sval);
     ```
     sem指向信号对象，并给他初值value
-
+    sem_wait可以用来阻塞当前线程，直到信号量的值大于0，解除阻塞，然后把信号量-1，继续运行接下来的程序。
     pshared为0表示用于多线程的同步，>0表示可以共享，用于多进程同步
 
 * 条件变量
@@ -161,7 +161,7 @@
     int pthread_cond_timedwait(pthread_cond_t *restrict cond, pthread_mutex_t *restrict mutex, const struct timespec *restrict abstime);
     //唤醒一个，或者全部
     int pthread_cond_signal(pthread_cond_t *cond);
-    4int pthread_cond_broadcast(pthread_cond_t *cond);
+    int pthread_cond_broadcast(pthread_cond_t *cond);
     ```
     需要注意wait的时候需要传递一个**锁住的互斥锁**，函数会自动的把线程放到等待条件的线程列表，并解锁，返回时，会再次加锁。
 
@@ -180,7 +180,8 @@
     int pthread_rwlock_wrlock(pthread_rwlock_t *lock);
     int pthread_rwlock_unlock(pthread_rwlock_t *lock);
     ```
-
+    当写锁没有被持有时，可以获取任意数量的读锁；
+    当读锁、写锁都没有被持有时，可以获取一把写锁。
 * 自旋锁
     自旋锁采用忙等的方式进行加锁，因为不会进行调度的特点，当锁被短时间持有，可以考虑
 
@@ -237,11 +238,11 @@ pid_t getsid(pid_t pid);
     首先介绍一下Linux上的进程状态：
     * R(Running)：可执行状态，包括就绪态和运行态，也就是可执行队列。
     * S(Interruptible/Sleep)：可以被中断的睡眠态，在等待某件事发生
-    * D(Uniterruptible)：不可中断的睡眠态，不响应各种异步信号等。这个状态可以用来避免内核的某些流程被打断，比如再做IO操作时
+    * D(Uniterruptibl😂e)：不可中断的睡眠态，不响应各种异步信号等。这个状态可以用来避免内核的某些流程被打断，比如再做IO操作时
     * T(Traced/Stopped)：表示暂停或者跟踪状态，可以通过发送SIGSTOP(不可捕获)使进程暂停，发送SIGCONT可以恢复进程  
     跟踪是指进程被跟踪他的进程暂停，如gdb调试时，停在断点处，可以通过ptrace系统调用进行操作
-    * X(Exit)：退出状态，即将被销毁，如果是分离状态，则不会持有task_struc
-    * Z(Zombie)：退出状态，进程称为僵尸进程，等待回收资源
+    * X(Exit)：退出状态，即将被销毁，如果是分离状态，则不会持有task_struct
+    * Z(Zombie)：退出状态，进程称为僵尸进程，等待回收资源(将事态会占用进程号等信息，如果父进程没有 waitpid 的话，就会浪费空间，有两种方式，一种是通过 signal 注册回调，在回调中去 wait，另一种是signal(SIGCHLD, SIG_GIN)来忽略信号，这样内核会回收子进程信息)
 
     可以利用ps命令查看系统当前运行的进程(快照)：
     * a,-A,-e显示所有进程
@@ -298,9 +299,19 @@ pid_t getsid(pid_t pid);
 * 协程  
     协程是一种用户态的轻量级线程，协程的调度完全由用户控制。协程拥有自己的寄存器上下文和栈。协程调度切换时，将寄存器上下文和栈保存到其他地方，在切回来的时候，恢复先前保存的寄存器上下文和栈，直接操作栈则基本没有内核切换的开销，可以不加锁的访问全局变量，所以上下文的切换非常快。  
 
-    协程的一大特点是不由内核调度，而是由程序进程调度的，因此调度的代价比较小
+    协程的一大特点是不由内核调度，而是由程序进程调度的，因此调度的代价比较小。(**因为协程切换只要切换 CPU 上下文就好了，在用户态即可，而线程切换需要内核态和用户态的切换，需要修改 cpu 优先级之类的，还是比较慢的**)
 
+    关于 goroutine，可以看[Go并发原理](https://i6448038.github.io/2017/12/04/golang-concurrency-principle/)
 
+    核心就是 M:N 式调度，以及 MPG 模型。
+
+    关于为什么要用 P，见[goroutine调度过程中P到底扮演什么角色？](https://www.zhihu.com/question/63906375)  
+    * 避免频繁的访问全局队列，争用锁
+    * 可以让 mcache 等资源，绑定给 P，减少 M 造成的资源浪费。
+    
+    为了保证均衡的调度，上下文P会定期的检查全局的goroutine 队列中的goroutine，以便自己在消费掉自身Goroutine队列的时候有事可做。假如全局goroutine队列中的goroutine也没了呢？就从其他运行的中的P的runqueue里偷(直接偷一半)。
+
+    假如没有 P，那么 M 休眠时，runtime 检测到活跃个数小于设定，就会新起一个M，然后去全局队列中拉去一个 G 干活。有了 P 之后，可以将全局队列中的内容打散了给 P，减少了全局的竞争。
 
 ### 5.内存和IO
 * free(查看可用内存)
@@ -336,6 +347,26 @@ pid_t getsid(pid_t pid);
     ```
     带l当文件是索引文件时，返回的是符号链接(指向另一个链接的项)的有关信息，f开头的，返回的是fd对应的信息。
 
+    stat 结构如下：
+    ```c
+    struct stat {
+
+        mode_t     st_mode;       //文件对应的模式，文件，目录等
+        ino_t      st_ino;       //inode节点号
+        dev_t      st_dev;        //设备号码
+        dev_t      st_rdev;       //特殊设备号码
+        nlink_t    st_nlink;      //文件的连接数
+        uid_t      st_uid;        //文件所有者
+        gid_t      st_gid;        //文件所有者对应的组
+        off_t      st_size;       //普通文件，对应的文件字节数
+        time_t     st_atime;      //文件最后被访问的时间
+        time_t     st_mtime;      //文件内容最后被修改的时间
+        time_t     st_ctime;      //文件状态改变时间
+        blksize_t st_blksize;    //文件内容对应的块大小
+        blkcnt_t   st_blocks;     //伟建内容对应的块数量
+      };
+    ```
+
 * 文件权限  
     文件权限有9位，在stat中的st_mode字段，分别是用户、组、其他读写。
     ```c
@@ -349,7 +380,7 @@ pid_t getsid(pid_t pid);
     stat中有三个时间信息，分别为st_atime,st_mtime,st_ctime，都是timespec结构的。
 
     分别为：
-    * st_atime：读取文件或执行文件时更改的，任何对inode的访问都会更改此值
+    * st_atime：读取文件或执行文件时更改的，任何对文件的访问都会更改此值
     * st_mtime：写入文件时随文件内容更改
     * st_ctime：写入、更改所有者或链接设置时，随iNode更改而更改。只要stat出来的内容改变，ctime改变，也就是修改属性的时候改变
 
@@ -363,7 +394,8 @@ pid_t getsid(pid_t pid);
     调用link可以创建一个指向现有文件的连接。
 
 * 用户ID  
-    Linux有用户ID和组ID。在对文件进行操作的时候：* 首先检查用户ID是否为0(root)
+    Linux有用户ID和组ID。在对文件进行操作的时候：
+    * 首先检查用户ID是否为0(root)
     * 检查用户ID是否设置了对应位
     * 如果进程的进程组ID或附属组ID(Linux允许属于多个组)，则允许访问
     * 其他位被设置，则允许访问
@@ -414,6 +446,11 @@ pid_t getsid(pid_t pid);
     并发写时，长度不能超过PIPE_BUF字
 
     FIFO主要用来解决pipe不能用于没有亲缘关系的进程通信的问题
+    **FIFO的打开规则：**
+
+    如果当前打开操作是为读而打开FIFO时，若已经有相应进程为写而打开该FIFO，则当前打开操作将成功返回；否则，可能阻塞直到有相应进程为写而打开该FIFO（当前打开操作设置了阻塞标志）；或者，成功返回（当前打开操作没有设置阻塞标志）。
+    
+    如果当前打开操作是为写而打开FIFO时，如果已经有相应进程为读而打开该FIFO，则当前打开操作将成功返回；否则，可能阻塞直到有相应进程为读而打开该FIFO（当前打开操作设置了阻塞标志）；或者，返回ENXIO错误（当前打开操作没有设置阻塞标志）。
 
 * XSI IPC相似之处(消息队列，信号量，)  
     * 多个IPC汇聚方式：
@@ -445,6 +482,13 @@ pid_t getsid(pid_t pid);
     消息发送指针ptr指向要求是以`long int`开头的消息结构，用来确定成员的消息类型，msgrcv中的ptr类似
 
     linux用MSGMAX和MSGMNB来限制消息的长度和消息队列的长度
+
+    消息队列的优势在于：
+    1、消息队列也可以独立于发送和接收进程而存在，从而消除了在同步命名管道的打开和关闭时可能产生的困难。
+
+    2、同时通过发送消息还可以避免命名管道的同步和阻塞问题，不需要由进程自己来提供同步方法。
+
+    3、接收程序可以通过消息类型有选择地接收数据，而不是像命名管道中那样，只能默认地接收。
 
 * 信号量(semaphore)  
     最简单的信号量是只能取 0 和 1 的变量，这也是信号量最常见的一种形式，叫做二值信号量。而可以取多个正整数的信号量被称为通用信号量。
@@ -486,11 +530,11 @@ pid_t getsid(pid_t pid);
     当调用共享内存结束后，调用shmdt断开连接，但是这并不在系统中删除共享内存，只有当以IPC_RMID命令的调用shmdt才会删除
 
 * 信号  
-    信号用于通知进程发生了某种情况，进程可以忽略，按默认方式处理或者捕获该信号，设置自己的处理函数。
+    信号用于通知进程发生了某种情况，进程可以忽略，按默认方式处理或者捕获该信号，或设置自己的处理函数。
     常见的信号：
     * SIGINT(程序终止，在用户输入INTR字符时发出的)  
     * SIGKILL(立即结束程序运行，不能被捕获)  
-    * SIGSTOP(停止进程的运行，不能被捕获)  
+    * SIGSTOP(停止进程的运行，不能被捕获, ctrl z)  
     * SIGTERM(程序结束信号，可以被捕获，kill默认产生这个)  
     * SIGSEGV(试图访问未分配给自己的内存, 或试图往没有写权限的内存地址写数据)  
     * SIGCHLD(子进程结束时, 父进程会收到这个信号)  
@@ -545,7 +589,7 @@ pid_t getsid(pid_t pid);
 
     页表就是由页表条目(PTE，除了物理页号外，还会有一些权限标志)构成的数组
 
-    页表也有着自己的一个缓存，叫做TLB。
+    页表也有着自己的一个缓存，在 MMU 中，叫做TLB。
 
 * 多级页表
     假设是32位，4字节的PTE，页面大小为常见的4K，那么一个进程就要有4MB的页表常驻在内存中(即使大部分内容都是无效的)
@@ -588,8 +632,8 @@ pid_t getsid(pid_t pid);
     * LRU-K(最久未使用K次淘汰)：避免偶发访问造成的缓存污染问题，当访问次数达到K次时，才访问缓存
 
 * 动态内存分配器
-    * 隐式空闲链表：在链表块头部添加标志，表明是否是空闲，这种方式，每次查找合适的空闲块需要O(n)的时间
-    * 显式空闲链表：将空闲块单独开辟一个链表，查找时间为O(empty)
+    * 隐式空闲链表：在1、消息队列也可以独立于发送和接收进程而存在，从而消除了在同步命名管道的打开和关闭时可能产生的困难。
+    * 显式空闲链表：将空闲块单独开辟一个链表，查找时间为 O(empty)
     * 分离空闲链表：更近一步，将空闲链表进行分类，加速寻找空闲链表的时间，具体有如下做法
         * 简单分离存储：将大小类内的大小固定，也就是同一大小类内含有相等大小的块，不分割也不合并，实现简单，但是内部碎片大。
         * 分离适配：找到第一个适配的，进行分割，分割后插入适当的空闲链表中
@@ -609,8 +653,14 @@ pid_t getsid(pid_t pid);
   
     内存映射可以减少拷贝次数，因为通过read等需要将磁盘文件读到页缓存，再从页缓存拷贝到用户的buffer中，而映射可以直接通过指针操作mmap映射的内存，效率更高。
 
-### 10.页缓存、页回写、内存映射
 
+### 10.页缓存、页回写、内存映射
+* 存储器缓存结构
+    存储器的中心思想是，把第 k 层的，当做第 k+1 层的缓存。
+    ![缓存结构](./asserts/缓存结构.jpg)
+    高速缓存结构如上图，将地址分为了 t,s,b 三个部分，s 确定所在的缓存组，t 标记着缓存存储着哪个字节。
+    **缓存很有意思的没有用高位，而是用了中间位：**
+    如果采用高位，那么连续的内存块，就会映射到相同的高速缓存块。那么如果程序有着良好的局部性(一般而言都有)，连续访问数组的时候，缓存最多只会保存一小部分的数组内容，而如果用中间段，那么在开头几次不命中时，会缓存数组中的大部分内容。
 * 为什么要有页缓存  
     页缓存的主要原因是因为磁盘和和内存访问速度有着巨大的差别，为了加快从磁盘读取文件的速率而设计的。具体来说，当要读取磁盘文件的时候，先在page cache中查找，命中的话就不需要再从磁盘读取了。  
     对于写操作，有三种策略，不缓存写操作/更新缓存，写入磁盘(写透缓存)/通过标记脏页，定时回写
@@ -650,7 +700,7 @@ TCP状态图如图所示。
 
     TIME_WAIT主要解决两个问题：
     * 可靠实现TCP全双工连接的终止
-    * 允许老的分节在网络中消逝  
+    * 允许老的分节在网络中消逝
 
     对于第一个来说，服务器在发送FIN，试图把发端也关闭后，会进入LAST_ACK等待最后一个ACK，此时TIME_WAIT状态会在服务器重传FIN时，重新回复ACK，帮助服务器关闭。
 
@@ -661,6 +711,9 @@ TCP状态图如图所示。
     * C端处于TIME_WAIT，那么会回复ACK
     * 已经CLOSED了，那么会认为连接错误，发送RST，S收到后CLOSED
     * C端已经不再了，S会不断重传，直到重传超时，进入CLOSED
+
+* TIME_WAIT状态的问题
+    TIME_WAIT 出现在主动断开的一方，如 NGINX 做反向代理时，就会有着大并发的情况，导致 TIME_WAIT 状态大量出现，占用端口。可以通过 SO_REUSEADDR 设置，来使得客户端复用 TIME_WAIT 状态下的端口。SO_REUSEADDR 允许启动一个监听服务器并捆绑其众所周知端口，即使以前建立的将此端口用做他们的本地端口的连接仍存在
 
 ### 2.tcpdump(抓包)
 
@@ -774,7 +827,7 @@ tcpdump可以截获网络数据包，并对其进行分析。
         将buf里的文件写入fd中，count为需要读取或者写入的字节数，返回值为成功操作的字节数。
 
         因为Linux中所有设备都能看成文件，所以也可以用来操作sockfd
-
+    fwrite/fread 和他两的区别在于，f*是 c 语言库的实现，对于读操作，fread 每次会从内核缓冲区中，读取更多的数据，来减小内核态和用户态的切换。对于写操作，fwrite 会先将数据写入应用缓冲区中，等缓冲区满了，或者类似调用 fflush 这类函数时，再拷贝到内核缓冲区中。
     * recv、send(sys/socket.h)
         ```c
         ssize_t recv(int sockfd, void* buff, size_t nbytes, int flags);
@@ -905,65 +958,33 @@ tcpdump可以截获网络数据包，并对其进行分析。
     * epoll以红黑树保存fd在内核的cache里，因此有着高性能的插入、查找等操作
     * epoll通过设置回调函数，使就绪事件自动加入到就绪list中，因此每次只需要拷贝少许的就绪事件到用户态即可，而select和poll每次返回还得进行O(n)的遍历才能得到激活的事件。
 
-* epoll源码  
-    * eventpoll  
-        ```c
-        struct eventpoll {
-        spin_lock_t lock; //对本数据结构的访问
-        struct mutex mtx; //防止使用时被删除
-        wait_queue_head_t wq; //sys_epoll_wait() 使用的等待队列
-        wait_queue_head_t poll_wait; //file->poll()使用的等待队列
-        struct list_head rdllist; //事件满足条件的链表
-        struct rb_root rbr; //用于管理所有fd的红黑树（树根）
-        struct epitem *ovflist; //将事件到达的fd进行链接起来发送至用户空间
-        }
-        ```
-        每创建一个epollfd，就会有一个对应的eventpoll对象生成，他用来管理注册到这上面的事件，在epoll_create时创建
-    
-    * epitem
-        epitem封装了关注的事件，结构如下
-        ```c
-        struct epitem {
-            struct rb_node rbn; //用于主结构管理的红黑树
-            struct list_head rdllink; //事件就绪队列，指向eventpoll的rdllink
-            struct epitem *next; //用于主结构体中的链表
-            struct epoll_filefd ffd; //这个结构体对应的被监听的文件描述符信息
-            int nwait; //poll操作中事件的个数
-            struct list_head pwqlist; //双向链表，保存着被监视文件的等待队列，功能类似于select/poll中的poll_table
-            struct eventpoll *ep; //该项属于哪个主结构体（多个epitm从属于一个eventpoll）
-            struct list_head fllink; //双向链表，用来链接被监视的文件描述符对应的struct file。因为file里有f_ep_link,用来保存所有监视这个文件的epoll节点
-            struct epoll_event event; //注册的感兴趣的事件,也就是用户空间的epoll_event
-        }
-        ```
-    总的来说，内核通过eventpoll用红黑树组织注册的事件形成的eptiem
-    ![epoll_rbtree](./asserts/epoll_rbtree.jpg)
-    * 初始化  
-        epoll是内核的一个module，内核启动的时候，会初始化这个module
-        ```c
-        static int __init eventpoll_init(void)
-        {
-        mutex_init(&pmutex);
-
-        ep_poll_safewake_init(&psw);
-
-        epi_cache = kmem_cache_create("eventpoll_epi", sizeof(struct epitem), 0, SLAB_HWCACHE_ALIGN|EPI_SLAB_DEBUG|SLAB_PANIC, NULL);
-
-        pwq_cache = kmem_cache_create("eventpoll_pwq", sizeof(struct eppoll_entry), 0, EPI_SLAB_DEBUG|SLAB_PANIC, NULL);
-
-        return 0;
-        }
-        ```
-        初始化时，主要是通过slab层，创建了两个类的cache，从而加速之后分配这两个类的时间
-    
-    * epoll_ctl
-        在创建了eventpoll之后，可以调用epoll_ctl进行操作。首先会在对应的epfd的红黑树中查找是否已经有这个了，然后进行对应的操作。
-    * ep_insert
-        如果是添加新的事件，会通过初始化的cache进行分配epollitem对象，然后进行初始化，将对象加入到指定的等待队列中，并且和他的事件发生时的回调函数，硬件中断会调用该回调函数(主要功能是文件添加到就绪队列)
-
+* epoll 详解
+    [epoll本质1](https://zhuanlan.zhihu.com/p/63179839)
+    [epoll本质2](https://zhuanlan.zhihu.com/p/64138532)
+    [epoll本质3](https://zhuanlan.zhihu.com/p/64746509)
+    流程总结如下：
+    * 创建epoll对象后，可以用epoll_ctl添加或删除所要监听的socket。以添加socket为例，如下图，如果通过epoll_ctl添加sock1、sock2和sock3的监视，内核会将eventpoll添加到这三个socket的等待队列中。
+    * 当socket收到数据后，中断程序会给eventpoll的“就绪列表”添加socket引用。如下图展示的是sock2和sock3收到数据后，中断程序让rdlist引用这两个socket。
+    * 假设计算机中正在运行进程A和进程B，在某时刻进程A运行到了epoll_wait语句。如下图所示，内核会将进程A放入eventpoll的等待队列中，阻塞进程。
+    * 当socket接收到数据，中断程序一方面修改rdlist，另一方面唤醒eventpoll等待队列中的进程，进程A再次进入运行状态（如下图）。
 epoll整体流程如图
 ![epoll_process](./asserts/epoll_process.png)
 
-`TODO(jingyu):需要更新答案`
+* 高效 accept
+通常来说，有几种方式，如下：
+1. 阻塞 accept，获得连接后，调用 fork，创建子进程来处理连接(效率极低，一般已经不采用了)
+2. 主进程首先调用listen创建监听TCP套接字，进行监听，接着调用fork创建多进程，子进程内部调用阻塞accept等待连接请求，当有TCP连接请求到达时，这些子进程全部被唤醒并抢占连接请求，抢占到的子进程会获得该连接请求并创建TCP连接，然后进行handle。抢占不到连接请求的进程会收到EAGAIN错误并在下次调用阻塞accept时再次挂起。(多个进程因为一个连接请求而同时被唤醒，称为惊群效应，在高并发的情况下，大部分进程被无效的唤醒，是对系统性能的损耗)
+3. 主进程首先调用listen创建监听TCP套接字，进行监听，接着调用epoll_create创建一个epfd和对应的红黑树，然后调用fork创建多进程，子进程内部调用epoll_wait等待同一个epfd的事件，当有TCP连接请求到达时，也就是这个epfd有事件发生时，这些子进程全部被唤醒并处理事件，只有一个子进程通过调用非阻塞accept抢占到该连接请求并创建TCP连接，然后进行handle。(同样会导致惊群效应，且由于等待的是同意个 epfd，可能会导致混乱的问题，也就是 A 创建了连接 A，但可能发生事件时，被 B 抢占了该事件)
+4. 主进程首先调用listen进行监听，接着调用fork创建多进程，子进程内部调用epoll_create创建各自的epfd和各自的红黑树，并调用epoll_wait等待同各自epfd的事件，这些子进程都将listen端口的监听事件放在自己的epfd中，当有TCP连接请求到达时，每个子进程的epfd的这个事件都会发生，这些子进程全部被唤醒并处理各自的这个事件，只有一个子进程通过调用非阻塞accept抢占到该连接请求并创建TCP连接，然后进行handle。(这种方式对比于第3种方式，不会出现进程与连接的不对应（创建TCP连接后的子进程会将该连接放在自己的epfd中而不是公共的epfd中），但在监听事件上仍然会出现惊群效应。)
+
+常见的方式是方式 2 和 4，针对方式 2 的 accept 惊群效应，linux2.6 通过在等待队列中加入 · 属性，来保证每次只唤醒一个该属性的进程，来解决惊群效应。
+
+方案 4 是多进程模式下 socket 编程使用比较广泛的方式，也是 NGINX 使用的方式，对于其可能造成的 epoll 惊群，有如下 3 种方案：
+* 加锁：基本思路是，子进程在进行epoll_ctl加入监听事件以及epoll_wait前，需要获得进程间的全局锁，获得锁的子进程才有资格通过监听获取连接请求并创建TCP连接，锁策略确保了只有1个子进程在处理TCP连接请求。(Nginx在 1.11.3 之前，通过 accept_mutex 默认为 on 来使用这种方案)
+* SO_REUSEPORT：linux 3.9 之后支持同一用户的不同进程，绑定同一组三元组，在内核做负载均衡分配给几个套接字。(1.9.1后支持，在多 worker 变为少 worker 的时候，可能会导致建立的连接没有送到对应的 socket，而导致客户端收到 RST，导致性能下降)
+* EPOLLEXCLUSIVE 标志位：子进程通过调用epoll_ctl将监听套接字与监听事件加入epfd时，会同时将EPOLLEXCLUSIVE标志位显式传入，这使得子进程带上了exclusive属性，也就是互斥属性，跟Linux 2.6版本解决accept惊群效应的解决方案类似，不同的地方在于，当有监听事件发生时，唤醒的可能不止一个进程，一定程度缓解惊群效应(Nginx在1.11.3版本时采用了该解决方案，所以从该版本开始，配置accept_mutex默认为off。有可能多个主要是因为如果是LT，那么有可能唤醒的第一个线程没来得及处理，第二个线程就又被唤醒了。)
+
+
 ### 5.HTTP和HTTPS的区别(优缺点，不同)
 HTTP 有以下安全性问题：
 * 通信使用明文，内容可能会被窃听；
@@ -1013,15 +1034,41 @@ POST：传输实体主体
 POST 主要目的不是获取资源，而是传输实体主体数据。
 GET 和 POST 的请求都能使用额外的参数，但是 GET 的参数是以查询字符串出现在 URL中，而 POST 的参数存储在实体主体部分。
 
-GET 的传参方式相比于 POST 安全性较差，因为 GET 传的参数在 URL 是可见的，可能会泄露私密信息。并且 GET 只支持 ASCII 字符，如果参数为中文则可能会出现乱码，而 POST 支持标准字符集。
+GET 的传参方式相比于 POST 安全性较差，因为 GET 传的参数在 URL 是可见的，可能会泄露私密信息。并且 GET 只支持 ASCII 字符，如果参数为中文则可能会出现乱码，而 POST 支持标准字符集。(**个人认为都不是很安全，要安全不该用 https 吗，看到个相对合理的答案：get 请求的url是在服务器上有日志记录，在浏览器也能查到历史记录，但是post请求的参数都在body里面，浏览器历史记录不到**)
+
+* http 的几个方法，括号内为对应的 SQL 命令
+    * GET(SELECT)：从服务器取出资源
+    * POST(CREATE):在服务器新建资源
+    * PUT(UPDATE):在服务器更新资源
+    * DELETE(DELETE):从服务器删除资源
+
+* restful(表象层状态转变) api
+    * 每一个URI代表一种资源(我理解这个是核心，把http 理解为对资源的增删改查)；
+    * 客户端和服务器之间，传递这种资源的某种表现层；
+    * 客户端通过四个HTTP动词（get、post、put、delete），对服务器端资源进行操作，实现”表现层状态转化”。
+    对于操作的类型，不用参数表示，而是采用 http 命令来表示不同的操作类型。
+
+* http 传参
+    * url 传参：url 的一般格式为 `scheme://[userinfo@]host/path[?query][#fragement]`，各种方法都支持，但常用于 GET 请求。
+    其中 query 可以用来传参，
+    * 利用 html 表单：content-type 决定了在表单中数据是什么形式的，默认为 application/x-www-form-urlencoded(以键值对的形式发送)，还可以为 multipart/form-data(每个键值对都有自己的内容类型及配置)，还可以传 json 啊什么的，比较灵活。
+
+
 
 
 ### 9.TCP
 这部分在计网总结中有着很详细的介绍，刚看完不就，这里不再赘述了
 
+### 10.大量 TIME_WAIT 和 CLOSE_WAIT 的原因和解决办法
+1. TIME_WAIT
+由于主动关闭一端会维护 TIME_WAIT 状态 2MSL 时长，会占用描述符，可能导致后续的连接无法建立。
+一种方式是通过修改 net.ipv4.tcp_tw_reuse = 1，使得处于 TIME_WAIT 状态的可以被重用，还可以通过 SO_REUSEADDR 来重用套接字。
+2. CLOSE_WAIT
+CLOSE_WAIT 说明程序没有处理被动关闭的情况，在收到 FIN 后，没有去主动关闭 socket。
 
-## 脚本工具awk，sed，cat)
-### 1.cat
+
+## 脚本工具
+### 1.cat(concatenate files and print on the standard output)
 cat用来连接文件或标准输入输出，常用来显示内容，或者拼起来显示，常和重定位配合
 
 cat[选项][文件]
@@ -1037,9 +1084,83 @@ cat[选项][文件]
 * -E：每行结束显示$
 * -n：输出行号
 * -s：一行空白替换两行以上的
-  
 
+### 2. ls(list directory contents)
+列出当前目录下的文件
 
+常用参数如下：
+* -l：除了文件名之外，还将文件的权限、所有者、文件大小等信息详细列出来。
+* -a：列出目录下的所有文件，包括以 . 开头的隐含文件
+* -h：human readable
+
+### 3.head/tail
+打印文件开头/结尾的内容。
+
+常用参数：
+* -n: 指定打印的行数，默认为 10 行
+* -f(only tail): 追踪文件的末尾 
+
+### 4.less
+不可编辑版的 vim
+
+常用参数：
+* -N: 显示行号
+* -s: 连续空行为一行
+* x[数字]: 将 tab 规定为指定数字空格
+
+### 5.grep
+
+* -e: 使用正则搜索, 注意:{}等一些特殊符号需要进行转义. 即使用\{\}
+* -i: 不区分大小写
+* -v: 查找不包含指定内容的行
+* -w: 按单词搜索
+* -c: 统计匹配到的次数
+* -n: 显示行号
+* -r: 逐层遍历目录查找
+* -A: 显示匹配行及前面多少行, 如: -A3, 则表示显示匹配行及前3行
+* -B: 显示匹配行及后面多少行, 如: -B3, 则表示显示匹配行及后3行
+* -C: 显示匹配行前后多少行,   如: -C3, 则表示显示批量行前后3行
+* -E: 扩展的正则表达式. 使用该参数时不用加转义符\, 如可以直接使用[a-z]{5}
+* --color: 匹配到的内容高亮显示
+* --include: 指定匹配的文件类型
+* --exclude: 过滤不需要匹配的文件类型
+
+### 6.wc(word count)
+统计行数、单词以及字节数。
+
+* -l: 输出行号
+
+### 7.chmod
+更改文件权限。
+
+常用参数：
+* +x/+r/+w: 增加执行/读/写权限，-也可以
+* chmod 数字 文件名: 修改权限为数字，排序为owner group others，常用 644(rw-r-r)，755(rwx-rx-rx)以及 777(rwx-rwx-rwx)
+
+### 8. ps(Process Status)
+默认显示当前用户，有控制终端的进程
+* -aux: 显示所有进程，包括其他用户的
+
+### 9. &/ jobs / fg / bg
+
+* &：在后台运行进程，终端关闭/ssh关闭，命令会被终止
+* jobs：显示出当前终端下启动的命令，-l 显示 pid
+* fg %1: 把 1 号 job 放到前台，并开始运行
+* bg %1: 继续被挂起的进程，默认是最后一个
+
+### 9.kill
+向进程发送信号，默认发送 SIGTERM 信号给进程(该信号默认为终止进程，但是可以被捕获，所以有可能失败)。可以指定 SIGKILL(终止进程，不能被捕获)，强制杀死进程、
+killall + 名字，会删掉所有有这个名字的进程。
+ctrl+c -> SIGINT 进程终止
+ctrl+z -> SIGTSTP 停止信号，前台进程放入后台并挂起
+
+### 10. cp/mv/rm
+
+首先介绍一下三个命令的背后具体做了什么
+* rm: 删除一个文件。底层调用了 unlink 来删除文件名，但是磁盘上的文件不一定会被删除，因为 linux 也采用了引用计数的方式来管理文件。
+* rename: 重命名一个文件。如果原文件存在，则会覆盖原来的文件。一种方式是清空后写入，一种是删除旧的后新建一个同名的
+* mv: 移动一个文件。移动后，调用 rename 进行重命名。
+* cp: 拷贝一个文件。当目标文件存在，执行 cp 后，文件的 inode 没有改变，是清空了内容后，把新的内容写入了目标文件。对于大文件，为什么CP比MV慢很多
 
 ## 编程语言
 
@@ -1075,7 +1196,7 @@ cat[选项][文件]
 * c++的四种cast(static_cast,dynamic_cast,const_cast,reinterpret_cast)  
     首先说一下，和旧式的强制转换(T(exp) or (T)exp)，更推荐采用新式的转换，因为更容易辨认，并且对转换的功能进行了分类，更不容易出错  
     * const_cast  
-        通常被用来移除对象的常量性，也是唯一有这个能力的cast运算符
+        通常被用来移除对象的常量性，也是唯一有这个能力的cast运算符，甚至 static 都不行
     * dynamic_cast(run-time type identification)  
         * 多态类型转换(上下均可)
         * 执行运行时的类型检查
@@ -1096,7 +1217,7 @@ cat[选项][文件]
     * unique_ptr  
         * 独占智能指针指向的资源
         * 不允许复制，只能移动(因为要独占资源)
-    * shared_ptr  
+    * shared_ptr  a
         * 带有一个引用计数，记录资源被引用的次数，这样当最后一个对象不再持有资源时，可以释放资源
         * 同样支持移动语意
         * 常用成员
@@ -1105,7 +1226,6 @@ cat[选项][文件]
           * swap：交换shared_ptr
           * reset：当前变量放弃资源
           * get：返回内部指针
-          * 
     * weak_ptr  
         * shared_ptr的一种扩充，不管理指向的对象，但是可以对对象有效性进行监控
         * 可以用来解决shared_ptr环形引用的问题
@@ -1141,8 +1261,10 @@ cat[选项][文件]
     * 全局变量类的构造在main之前
     * 利用全局lambda表达式
 
+    见[如何在 main 函数前执行一条语句](https://www.zhihu.com/question/26031933)
+
 * extern "C"  
-    由于c++支持重载，所以c++生成的符号会根据参数、明明空间来确定函数的前面，和c生成的方式不一样。
+    由于c++支持重载，所以c++生成的符号会根据参数、命名空间来确定函数的签名，和c生成的方式不一样。
 
     所以，在要被c++调用的内容中，增加extern "C"来告诉编译器这部分是c的接口
 
@@ -1227,10 +1349,11 @@ cat[选项][文件]
 
 * 右值引用/std::move/完美转发
     * 右值：指的是程序中的临时值，是不能取地址的值，对于纯右值来说，在表达式结束之后，立马会被销毁。
-    * 右值引用：方式为`T&& k = rlvate`,这样可以延长临时值的声明，到和k相同，当T需要类型推导时，此时此时既可以是左值，也可以是右值，也叫作万能引用，可以利用std::forward进行完美转发
+    * 右值引用：方式为`type&& k = rlvate`,这样可以延长临时值的声明，到和k相同，当T需要类型推导时，此时此时既可以是左值，也可以是右值，也叫作万能引用，可以利用std::forward进行完美转发
     * 通过移动构造函数，我们可以充分的利用右值的资源，进行所有权的移动，这样可以减少拷贝的次数。对于左值，std::move可以强制转换为右值，从而调用移动构造，对拷贝次数进行优化。
   
     **需要注意，实际上std::move什么都没做，只是强制转换为右值，从而使对象能够调用移动构造，具体的优化，要看是否提供了移动构造**
+    **还有一点，右值引用只能延长 prvalue 的生命周期，对于 xvalue(也就是 std::move 产生的，并不能起到延长的作用)**
 
 * c++源文件到执行文件过程
     * 预处理：替换头文件、宏定义(#开头的指令)等，生成预编译文件
@@ -1295,6 +1418,35 @@ cat[选项][文件]
 
     但是结果只有不在是确定的，在只能是概率上在
 
+### c++设计模式
+
+设计模式主要是为了解决某类重复出现的问题而出现的一套成功或有效的解决方案。设计模式提供一种讨论软件设计的公共语言，使得熟练设计者的设计经验可以被初学者和其他设计者掌握。
+
+1. 单例模式(确保一个类只有一个实例，并提供一个全局访问点来访问这个实例)
+    
+    有些东西是整个程序独占的，比如任务管理器、打印机这种，没必要生成多个一样的实例，既造成资源的浪费，又会让用户困惑。
+
+    ![单例模式UML](https://img-blog.csdnimg.cn/20191020174208514.png)
+
+    下面是单例模式的代码，需要特别注意，单例模式要禁用掉构造及拷贝构造等。此外，代码利用的局部静态变量的线程安全性。
+    ```cpp
+    // 线程安全的单例模式
+    class Singleton
+    {
+    private:
+        Singleton() { }
+        ~Singleton() { }
+        Singleton(const Singleton &);
+        Singleton & operator = (const Singleton &);
+    public:
+        static Singleton & GetInstance()
+        {
+            static Singleton instance;
+            return instance;
+        }
+    };
+    ```
+
 ### modern c++
 
 * 结构化绑定(c++17)
@@ -1307,7 +1459,7 @@ std::tie(lower, upper) =
 auto [lower, upper] =
   mmp.equal_range("four");
 ```
-可以直接用 auto，捕获 pair、tuple 等的元素值，还是很方便的，注意vector 这种编译期长度位置的，不可以捕获。
+可以直接用 auto，捕获 pair、tuple 等的元素值，还是很方便的，注意 vector 这种编译期长度未知的，不可以捕获。
 
 * lambda
 
@@ -1431,7 +1583,7 @@ auto [lower, upper] =
 * topK问题(海量数据下找出最大的前K个数之类)  
     * 如果能读入内存，快排找pivot方案可以在O(n)时间内找到
     * 维护小根堆，可以在O(nlogK)时间内找到
-    * 利用hash(x) %K进行分块，在每个小文件统计单词出现的频率，再对文件进行归并排序。
+    * 利用hash(x) % K进行分块，在每个小文件统计单词出现的频率，再对文件进行归并排序。
 
 * Bit-map
     bit-map可以用位数组来表示某些元素是否存在，可以大大节省存储空间。  
@@ -1446,7 +1598,7 @@ auto [lower, upper] =
     当插入一个元素时，用k个hash函数计算置位的k位。查询时，**如果k位都是1，则可能在，否则，一定不在。**
 
 ### 4.B树，B+树
-B树也称B-树,它是一颗多路平衡查找树。我们描述一颗B树时需要指定它的阶数，阶数表示了一个结点最多有多少个孩子结点，一般用字母m表示阶数。当m取2时，就是我们常见的二叉搜索树。可以用节点的路数范围表示B数(ceil(m/2), m-)树  
+B树也称B-树,它是一颗多路平衡查找树。我们描述一颗B树时需要指定它的阶数，阶数表示了一个结点最多有多少个孩子结点，一般用字母m表示阶数。当m取2时，就是我们常见的二叉搜索树。可以用节点的分支范围表示B数(ceil(m/2), m)树  
 
 一颗m阶的B树定义如下：
 * 最多m-1个关键字
@@ -1480,11 +1632,19 @@ AVL是左右子树平衡因子(高度差绝对值)小于等于1的树。
 
 插入删除都可能造成失衡，可以通过3+4重构进行平衡。但是，删除操作会逐步上滤，至多需要logn次调整。
 
-红黑树希望减小AVL删除操作的logn次结构调整，红黑树定义：  
+* 3+4 重构
+    * 设 g 为最低的失衡节点，p 是 g 更高的那个孩子，v 是 p 更高的那个孩子。
+    * 按中序排序，重命名为 a < b < c
+    * 他们总共拥有互不相交的四颗子树
+    * 按中序遍历重命名为 T0 < T1 < T2 < T3
+    ![3+4](asserts/3+4重构.png)
+
+
+红黑树希望减小AVL删除操作的**logn次结构调整**，红黑树定义：  
 * 树根为黑色
 * 外部节点均为黑色
 * 其余节点，若为红，则只能有黑孩子(红的父，子均为黑)
-* 外部节点到根的路径途中黑色节点数目想到
+* 外部节点到根的路径途中黑色节点数目相同
 
 如果将红黑树的红节点上移一层，其实就是(2, 4)树
 
@@ -1498,7 +1658,7 @@ AVL是左右子树平衡因子(高度差绝对值)小于等于1的树。
     如果会发生溢出，那么就要进行分裂，将中间节点染红后，移入上一层，这种情况有可能上溢到根节点，但是，过程中只有染色，没有结构调整，而一旦进行结构调整，红黑树必将重新平衡
 
 * 红黑树的删除和双黑缺陷
-    删除情况太多，国语复杂，先不考虑了。。。
+    删除情况太多，过于复杂，先不考虑了。。。
     但是要知道删除的结构调整次数也是只有常数次
 
 
@@ -1508,11 +1668,48 @@ go语言部分看笔记
 [Go程序设计语言](../书籍笔记/Go程序设计语言.md)
 [Go源码](../书籍笔记/Go源码.md)
 [go 注意事项](../书籍笔记/Go注意事项.md)
+
+### 1. GC
+
+* 标记清除法
+    * 标记：从程序的根节点开始，递归的遍历所有对象，将能遍历到的对象打上标记
+    * 清楚：将所有未标记的对象当做垃圾销毁。
+    
+    这个算法缺陷在于 STW 问题，因为算法在标记及清除的时候，必须暂停其他所有程序，防止其他并发程序新增加的对象没来得及标记，就被清除了。因为遍历复杂度随着对象的增多而增大，在大型程序中STW 可能要达到毫秒级别，这是非常可怕的。
+* 三色标记法，可以看[GoGC](https://blog.csdn.net/m0_37145844/article/details/106862923)
+    正常流程如下：
+    * 新创建的对象，默认颜色为白色
+    * 每次GC回收开始, 然后从根节点开始遍历所有对象，把遍历到的对象从白色集合放入“灰色”集合
+    * 遍历灰色集合，将灰色对象引用的对象从白色集合放入灰色集合，之后将此灰色对象放入黑色集合
+    * 重复第三步, 直到灰色中无任何对象
+    * 回收所有的白色标记表的对象. 也就是回收垃圾
+
+    如果三色标记只采用正常流程，那么在没有 STW 的情况下，是有可能出现问题的
+    * 白色对象被黑色对象引用
+    * 灰色对象和它可达的白色对象的关系遭到破坏(灰色丢了那个白色)
+    当上述两个问题成立时，对象就会丢失掉
+
+    为了避免上述情况，满足下面两种方式，均可以破坏掉上面的两个条件
+    * 强三色不变式：不存在黑色对象引用到白色对象的指针
+    * 弱三色不变式：所有被黑色对象引用的白色对象都处于灰色保护状态  
+
+    为了解决上述问题，Go 利用了两种屏障：
+    * 插入屏障：在A对象引用B对象的时候，B对象被标记为灰色。(将B挂在A下游，B必须被标记为灰色)
+    满足: 强三色不变式. (不存在黑色对象引用白色对象的情况了， 因为白色会强制变成灰色)，这种方式在结束时，需要 STW，来标记栈上的对象
+    * 删除屏障：在 GC 过程中被删除的对象，如果自身为灰色或者白色，那么被标记为灰色。
+    满足: 弱三色不变式(保护灰色对象到白色对象的路径不会断)，这种方式的回收精度低，一个对象即使被删除了最后一个指向它的指针也依旧可以活过这一轮，在下一轮GC中被清理掉。
+
+    为了解决屏障的问题，Go 1.8 提出了混合写屏障的机制：
+    * GC 开始时将栈上对象标记为黑色
+    * GC 期间，栈上创建对象标记为黑色
+    * 被删除的对象标记为灰色
+    * 表添加的对象标记为灰色  
+    满足变形的弱三色不变式，主要改进标记后需要重新 STW，标记栈上的问题。
+
+
 ## mysql部分
 [mysql 必知必会](../书籍笔记/MySQL必知必会.md)
-ps ...高性能 mysql 待续
-etcd
-## 开发组件(docker、k8s)
+[mysql](../书籍笔记/MySQL.md)
 
 ## rpc
 
@@ -1554,8 +1751,24 @@ etcd
 可以看到thrift可以解决前面提到的问题 1 和 3，但是对于服务间寻址(如用 tcp)还是需要给出 host 和 port，对于错误处理对于微服务来说，也完全不够。
 
 因此，kite 框架是，基于 thrift，封装一个 kite 框架，以实现 2 和 4 的功能。
-为了实现服务注册以及服务发现的功能，Kite之间可以互相通信，通过Kontrol的服务发现机制，一个Kite可以发现其它的Kites。也就是说一个Kite可以在Kontrol注册自己，从而让其它的kites能找到它； Kontrol本身也是一个Kite，它用于对服务进行注册和鉴权，使用 etcd 作为存储。服务熔断，也可以在这里实现
+为了实现服务注册以及服务发现的功能，Kite之间可以互相通信，使用 consul 做服务发现及注册。也就是说一个Kite可以在 consul 注册自己，从而让其它的kites能找到它； Kontrol本身也是一个Kite，它用于对服务进行注册和鉴权，使用 etcd 作为存储。服务熔断，也可以在这里实现
 
+kite 的 server 会循环接收 client 的请求，当发生请求时，起一个 goroutinue 来运行handleRPC，去根据参数，调用对应的函数对象。kite 在执行 endpoint 前，会执行一些中间件。
+* 熔断：当下游调用频繁失败时，禁用掉下游调用。
+* 服务发现：调用 consul 的 lookupup 方法，想 consul agent 发送 http 请求，拉取最新的服务列表。
+* 限流：kite 限流通过令牌桶实现，具体是有一个定时器，以轮询的方式，不断定时向桶里填充令牌(每次填充一定数量，但最多不能超过 limit)。到来的请求只有持有令牌，才能成功调用，否则失败。
+
+### thrift 编码
+
+1. VarInt
+
+对较小整数来说，这种固定字节数编码很浪费bit。所以人们就发明了一个类型叫变长整数varint。数值非常小时，只需要使用一个字节来存储，数值稍微大一点可以使用 2 个字节，再大一点就是 3 个字节，它还可以超过 4 个字节用来表达长整形数字。
+
+其原理也很简单，就是保留每个字节的最高位的bit来标识后一个字节是否属于该bit，1表示属于，0表示不属于。
+
+2. ZigZag
+
+如果采用补码对 int 进行编码的话，那么负数这种，就会占用很大的空间。thrift 作者们的观察是绝对值越小的，出现概率越高，因此应该提出了 zigzag 编码。将正负数交替的放在奇偶处，zigzag 将负数编码成正奇数，正数编码成偶数。解码的时候遇到偶数直接除 2 就是原值，遇到奇数就加 1 除 2 再取负就是原值。
 
 ## redis
 基础见 [redis笔记](../书籍笔记/Redis设计与实现.md)
@@ -1572,8 +1785,6 @@ etcd
 [缓存使用](https://toutiao.io/posts/lmhayx/preview)
 [缓存更新](https://coolshell.cn/articles/17416.html)
 [localcache小计](./LocalCache%20学习小记.pdf)
-
-## docker
 
 
 
@@ -1698,6 +1909,6 @@ etcd
 由于之前设计时，每个 course 都带了分类的名字，但是又是可能需要对分类名称进行更改，因此需要更新一下回复课程的名字。
 当时我们考虑了两种方案：
 * 两表连接查询
-    这个方案有几个问题，一个是公司不鼓励使用 join，主要是由于join 的优化可能有性能上的问题，且可能会同时锁住多个表
+    这个方案有几个问题，一个是公司不鼓励使用 join，主要是由于 join 的优化可能有性能上的问题，且可能会同时锁住多个表
 * 读取两次，在 service 层做处理
     需要读取两个表，网络 io 次数更多。但由于分类名称实际上很少更改，且短时的不同影响较小，我们采用 localcache 进行缓存。关于缓存的选取，见[缓存选取](https://toutiao.io/posts/lmhayx/preview)
